--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,7 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+
 @tailwind base;
 
 /* Your own custom base styles */
-
+@layer base {
+  html {
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+    scroll-snap-type: mandatory;
+  }
+}
 /* Start purging... */
 @tailwind components;
 /* Stop purging. */
