Drawer fixed, DashLayout, DashSidebar added, react router added

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,11 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url(https://fonts.googleapis.com/css?family=Public+Sans:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 @tailwind base;
 
 /* Your own custom base styles */
 @layer base {
   html {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Public Sans';
     box-sizing: border-box;
     padding: 0;
     margin: 0;
